# Kasia-warehouse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.dev  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
context/: README.md  architecture.md  company-profile.md  domain-glossary.md  hetzner-provisioning-handoff.md  open-questions.md  owner-request.md  people-and-roles.md  petr-summary.md  petr-summary.txt  product-ideology.md  public-site-research.md  public-site.md  research-sources.md  state.md  tech-options.md  warehouses.md  workflows.md
design-options/: 01-mono-minimal.html  02-swiss-grid.html  03-warm-minimal.html  04-green-brand.html  05-dark-minimal.html  06-airy-editorial.html  07-soft-cards.html  08-editorial-type.html  09-classic-serif.html  10-bordered-erp.html  11-indigo-minimal.html  11-linear.html  12-slate-amber.html  12-stripe.html  13-notion.html  13-sidebar-app.html  14-teal-calm.html  14-vercel.html  15-data-numerals.html  15-shopify.html  16-apple.html  16-pastel-cards.html  17-github.html  17-outline-lineart.html  18-airbnb.html  18-sand-minimal.html  19-compact-pro.html  20-green-pro.html  README.md  index.html
infra/: RUNBOOK.md
inventory/: __init__.py  admin.py  conftest.py  forms.py  middleware.py  models.py  services.py  tests.py  urls.py  views.py
kasia/: asgi.py  urls.py  wsgi.py
web/: admin.py  apps.py  content.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
(+433 files in other folders)
